[package]
name = "christmasball"
version = "0.1.0"
authors = ["Andreas Bergmeier <abergmeier@gmx.net>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.47.2", default-features = false }
anyhow = "1.0.75"
esp-idf-sys = "0.33.5"
esp-idf-hal = "0.42.4"
colors-transform = "0.2.11"
url = "2.4.1"
rgb = "0.8.37"

[build-dependencies]
embuild = "0.31.3"
